# parikshan_code

./: .gitignore  README.md  README.rst  statistical.md
data/: vzmigrate_output_clean
guided/: Makefile  abstract.tex  adaptive.tex  background.tex  guided.tex  introduction.tex  usenix_authors.tex
icse2016/: abstract.tex  algorithm.tex  applications.tex  casestudy.tex  challenges.tex  clone.tex  conclusion.tex  design.tex  divergence.tex  dual.tex  evaluation.tex  implementation.tex  introduction.tex  microCloneEval.tex  motivation.tex  proxyAgg.tex  proxyDup.tex  realWorldCloneEval.tex  related.tex  sandbox-usenix.tex  sandbox.bib  sandbox.tex  sig-alternate.cls  statisticalTesting.tex  usenix_authors.tex  window.tex  windowEval.tex
nier/: Makefile  abstract.tex  casestudy.tex  challenges.tex  conclusion.tex  contributions.tex  design.tex  design.tex.bak  evaluation.tex  implementation.tex  introduction.tex  motivation.tex  network-issues.tex  related.tex  sandbox.bib  sandbox.tex  trigger.tex
paper/: GailFeedback.txt  Makefile  Tables.xlsx  _region_.tex  abstract.tex  acm_authors.tex  algorithm.tex  casestudy.tex  casestudy_franjo.tex  challenges.tex  clone.tex  conclusion.tex  contributions.tex  design.rel  design.tex  (+20 more)
test-cases/mysql-644/sqlreplay/: Makefile  Makefile.am  Makefile.in  compile  compile-command  gen_graphs.sh  gen_plots.pl  gettran.pl  overviewgraphs.sh  overviewgraphs_alg.sh  overviewgraphs_all.sh  populate_db.sh  populate_db.sh_bk  populate_db.txt  readme  run.txt  runtran  runtran.cc  tmp
test-cases/mysql-644/sqlreplay/results/: queries
(+1619 files in other folders)
